--- a/index.html
+++ b/index.html
@@ -12,110 +12,129 @@
     <style>
         body { background: #000; color: white; font-family: 'Federo', sans-serif; overflow: hidden; margin: 0; }
         .font-inter { font-family: 'Inter', sans-serif; }
-        .glass { background: rgba(255, 255, 255, 0.03); backdrop-filter: blur(25px); border: 1px solid rgba(255, 255, 255, 0.08); }
+        .glass { background: rgba(255, 255, 255, 0.02); backdrop-filter: blur(30px); border: 1px solid rgba(255, 255, 255, 0.1); }
         #welcomeMsg { animation: glow 3s ease-in-out infinite alternate; }
         @keyframes glow { from { text-shadow: 0 0 10px #fff, 0 0 20px #38bdf8; opacity: 0.7; } to { text-shadow: 0 0 25px #fff, 0 0 50px #38bdf8; opacity: 1; } }
-        #btn-add { transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275); }
-        #btn-add.hide-node { transform: scale(0) rotate(90deg); opacity: 0; pointer-events: none; }
-        .btn-primary { background: #38bdf8; color: #000; font-weight: 900; transition: all 0.2s; }
-        .btn-primary:hover { background: #7dd3fc; transform: translateY(-2px); }
-        .tab-btn.active { background: #38bdf8; color: black; font-weight: 900; }
+        .btn-primary { background: #38bdf8; color: #000; font-weight: 900; transition: transform 0.1s; cursor: pointer; }
+        .btn-primary:active { transform: scale(0.95); }
+        .tab-btn { color: rgba(255,255,255,0.4); border-bottom: 2px solid transparent; transition: 0.2s; }
+        .tab-btn.active { color: #38bdf8; border-bottom: 2px solid #38bdf8; }
         .hidden { display: none !important; }
-        #boot-screen { position: fixed; inset: 0; background: #000; z-index: 10000; display: flex; flex-direction: column; align-items: center; justify-content: center; transition: opacity 0.5s; }
+        #boot-screen { position: fixed; inset: 0; background: #000; z-index: 10000; display: flex; align-items: center; justify-content: center; transition: opacity 0.4s; }
         #boot-screen.loaded { opacity: 0; visibility: hidden; }
+        ::-webkit-scrollbar { width: 4px; }
+        ::-webkit-scrollbar-thumb { background: #38bdf8; border-radius: 10px; }
     </style>
 </head>
 <body onload="brython()">
     <div id="login-screen" class="fixed inset-0 bg-black z-[20000] flex items-center justify-center">
-        <div class="glass p-10 rounded-[3rem] w-[400px] border border-white/10 text-center">
-            <h2 class="text-2xl font-black italic mb-6">SIC <span class="text-sky-500">TERMINAL</span></h2>
-            <div id="auth-fields" class="space-y-4">
-                <input id="auth-email" type="email" placeholder="Email" class="w-full bg-white/5 border border-white/10 p-4 rounded-2xl outline-none focus:border-sky-500 text-sm">
+        <div class="glass p-10 rounded-[2rem] w-[380px] border border-white/10 text-center">
+            <h2 class="text-2xl font-black italic mb-2 tracking-tighter">SIC <span class="text-sky-500">AUTH</span></h2>
+            <p class="text-[9px] text-white/20 uppercase mb-8 tracking-[0.3em]">Neural Link Authorization</p>
+            <div class="space-y-3">
+                <input id="auth-email" type="email" placeholder="Email Address" class="w-full bg-white/5 border border-white/5 p-4 rounded-xl outline-none focus:border-sky-500 text-sm font-inter">
                 <div class="relative">
-                    <input id="auth-pass" type="password" placeholder="Password" class="w-full bg-white/5 border border-white/10 p-4 rounded-2xl outline-none focus:border-sky-500 text-sm">
-                    <button id="btn-forgot" class="absolute right-4 top-4 text-[8px] text-sky-500 uppercase font-black">Forgot?</button>
+                    <input id="auth-pass" type="password" placeholder="Password" class="w-full bg-white/5 border border-white/5 p-4 rounded-xl outline-none focus:border-sky-500 text-sm font-inter">
+                    <button id="btn-forgot" class="absolute right-4 top-4 text-[9px] text-sky-500 uppercase font-black">Forgot?</button>
                 </div>
-                <button id="btn-auth-submit" class="btn-primary w-full py-4 rounded-2xl text-xs uppercase">Initialize</button>
-                <div class="g_id_signin" data-type="standard"></div>
+                <button id="btn-auth-submit" class="btn-primary w-full py-4 rounded-xl text-xs uppercase tracking-widest mt-2">Initialize Link</button>
             </div>
-            <p class="mt-6 text-[10px] text-white/20 uppercase">Switch Mode: <button id="btn-toggle-auth" class="text-sky-500 font-black">Create Account</button></p>
         </div>
     </div>
 
     <div id="boot-screen">
-        <div class="w-20 h-20 border-4 border-t-sky-500 rounded-full animate-spin"></div>
+        <div class="w-16 h-16 border-2 border-white/5 border-t-sky-500 rounded-full animate-spin"></div>
     </div>
 
     <div class="flex h-screen w-screen bg-black">
-        <aside class="w-72 border-r border-white/5 p-6 flex flex-col z-20">
-            <div class="mb-10 p-4 glass rounded-3xl flex items-center gap-4">
-                <img src="https://i.imgur.com/r6oJp4O.png" class="w-12 h-12 rounded-xl object-cover">
-                <div>
-                    <p id="sideName" class="text-xs font-black uppercase">Guest</p>
-                    <p class="text-[8px] text-white/30 uppercase">Operator</p>
+        <aside class="w-64 border-r border-white/5 p-6 flex flex-col z-20 bg-black">
+            <div class="mb-10 p-4 glass rounded-2xl flex items-center gap-3">
+                <div class="w-10 h-10 rounded-lg bg-sky-500 flex items-center justify-center font-black text-black">R</div>
+                <div class="overflow-hidden">
+                    <p id="sideName" class="text-[10px] font-black uppercase truncate">Guest</p>
+                    <p class="text-[8px] text-white/30 uppercase">SIC Operator</p>
                 </div>
             </div>
-            <nav class="space-y-2">
-                <button id="btn-start" class="w-full text-left p-4 rounded-xl text-[10px] font-black uppercase hover:bg-white/5">🏠 Home</button>
-                <button id="btn-dashboard" class="w-full text-left p-4 rounded-xl text-[10px] font-black uppercase hover:bg-white/5">▣ Dashboard</button>
-                <button id="btn-config" class="w-full text-left p-4 rounded-xl text-[10px] font-black uppercase hover:bg-white/5">⚙ Settings</button>
+            <nav class="space-y-1">
+                <button id="btn-start" class="w-full text-left p-3 rounded-lg text-[10px] font-black uppercase hover:bg-white/5 transition-colors">🏠 Home</button>
+                <button id="btn-dashboard" class="w-full text-left p-3 rounded-lg text-[10px] font-black uppercase hover:bg-white/5 transition-colors">▣ Dashboard</button>
+                <button id="btn-config" class="w-full text-left p-3 rounded-lg text-[10px] font-black uppercase hover:bg-white/5 transition-colors">⚙ Settings</button>
             </nav>
         </aside>
 
-        <main class="flex-grow relative bg-[#020617]">
+        <main class="flex-grow relative bg-[#020617] overflow-hidden">
             <div id="desktop-view" class="absolute inset-0 flex items-center justify-center">
                 <div class="text-center">
-                    <h1 id="welcomeMsg" class="text-7xl font-black italic tracking-tighter">MOBBY<span class="text-sky-500">OS</span></h1>
-                    <p class="mt-4 text-[11px] text-white/40 uppercase">Welcome, <span id="user-display-name" class="text-white font-black">Operator</span></p>
+                    <h1 id="welcomeMsg" class="text-8xl font-black italic tracking-tighter">MOBBY<span class="text-sky-500">OS</span></h1>
+                    <p class="mt-4 text-[10px] text-white/20 uppercase tracking-[1em]">SIC Corp Intelligence</p>
                 </div>
             </div>
 
             <div id="dashboard-view" class="absolute inset-0 hidden p-12">
-                <h2 class="text-4xl font-black italic uppercase mb-8">System <span class="text-sky-500">Metrics</span></h2>
-                <div class="glass p-6 rounded-3xl w-48">
-                    <p class="text-[9px] text-white/40 uppercase font-black">Messages</p>
-                    <p id="stat-msgs" class="text-3xl font-black text-sky-500">0</p>
+                <h2 class="text-3xl font-black italic uppercase mb-8 tracking-tighter">System <span class="text-sky-500">Metrics</span></h2>
+                <div class="grid grid-cols-3 gap-4">
+                    <div class="glass p-6 rounded-2xl">
+                        <p class="text-[9px] text-white/40 uppercase font-black">Memory</p>
+                        <p class="text-2xl font-black text-sky-500">Active</p>
+                    </div>
+                    <div class="glass p-6 rounded-2xl">
+                        <p class="text-[9px] text-white/40 uppercase font-black">Sync</p>
+                        <p id="stat-msgs" class="text-2xl font-black text-sky-500">0</p>
+                    </div>
                 </div>
             </div>
 
-            <div id="chat-view" class="absolute inset-0 hidden flex flex-col p-12">
-                <div id="chat-box" class="flex-grow glass rounded-[3rem] p-8 overflow-y-auto space-y-4 mb-6"></div>
-                <div class="flex gap-4">
-                    <input id="chat-input" placeholder="Command..." class="flex-grow bg-white/5 p-6 rounded-3xl outline-none border border-white/10 focus:border-sky-500">
-                    <button id="send-chat" class="btn-primary w-16 h-16 rounded-3xl">➤</button>
+            <div id="chat-view" class="absolute inset-0 hidden flex flex-col p-10">
+                <div id="chat-box" class="flex-grow glass rounded-[2rem] p-8 overflow-y-auto space-y-4 mb-4 border border-white/5"></div>
+                <div class="flex gap-3">
+                    <input id="chat-input" placeholder="Awaiting command..." class="flex-grow bg-white/5 p-5 rounded-2xl outline-none border border-white/5 focus:border-sky-500 font-inter text-sm">
+                    <button id="send-chat" class="btn-primary w-14 h-14 rounded-2xl flex items-center justify-center text-xl">➤</button>
                 </div>
             </div>
 
-            <button id="btn-add" class="absolute bottom-10 right-10 w-16 h-16 bg-sky-500 rounded-full text-black text-3xl font-bold">+</button>
+            <button id="btn-add" class="absolute bottom-8 right-8 w-14 h-14 bg-sky-500 rounded-full text-black text-2xl font-bold shadow-lg shadow-sky-500/20 hover:scale-105 active:scale-90 transition-all">+</button>
         </main>
     </div>
 
-    <div id="configModal" class="fixed inset-0 bg-black/90 hidden z-[10000] flex items-center justify-center">
-        <div class="glass w-[700px] h-[500px] rounded-[3rem] flex border border-white/10">
-            <div class="w-48 border-r border-white/5 p-6 space-y-2">
-                <button class="tab-btn w-full active" data-tab="tab-profile">Profile</button>
-                <button class="tab-btn w-full" data-tab="tab-cloud">Groq</button>
-                <button id="closeConfig" class="btn-primary w-full p-3 rounded-xl mt-10 text-[10px]">CLOSE</button>
+    <div id="configModal" class="fixed inset-0 bg-black/80 hidden z-[10000] flex items-center justify-center p-6">
+        <div class="glass w-full max-w-2xl h-[500px] rounded-[2rem] flex flex-col border border-white/10 overflow-hidden">
+            <div class="flex border-b border-white/5">
+                <button class="tab-btn px-8 py-5 text-[10px] font-black uppercase active" data-tab="tab-profile">Profile</button>
+                <button class="tab-btn px-8 py-5 text-[10px] font-black uppercase" data-tab="tab-cloud">Neural Key</button>
+                <button class="tab-btn px-8 py-5 text-[10px] font-black uppercase" data-tab="tab-security">Security</button>
+                <div class="flex-grow"></div>
+                <button id="closeConfig" class="px-6 text-white/20 hover:text-white transition-colors">✕</button>
             </div>
-            <div class="flex-grow p-10">
-                <div id="tab-profile">
-                    <h4 class="text-xl font-black uppercase text-sky-500 mb-4">Identity</h4>
-                    <input id="set-username" placeholder="Operator Name" class="w-full bg-white/5 p-4 rounded-xl mb-4 outline-none border border-white/10">
-                    <button id="save-profile" class="btn-primary px-6 py-2 rounded-lg text-[10px]">SAVE</button>
+            
+            <div class="flex-grow p-10 overflow-y-auto">
+                <div id="tab-profile" class="tab-content">
+                    <h4 class="text-xl font-black uppercase mb-6">Identity Profile</h4>
+                    <label class="text-[9px] text-white/40 uppercase font-black block mb-2">Display Name</label>
+                    <input id="set-username" placeholder="Operator Name" class="w-full bg-white/5 border border-white/5 p-4 rounded-xl mb-6 outline-none focus:border-sky-500">
+                    <button id="save-profile" class="btn-primary px-8 py-3 rounded-xl text-[10px] uppercase">Confirm ID</button>
                 </div>
-                <div id="tab-cloud" class="hidden">
-                    <h4 class="text-xl font-black uppercase text-sky-500 mb-4">Cloud API</h4>
-                    <input id="set-apikey" type="password" placeholder="gsk_..." class="w-full bg-white/5 p-4 rounded-xl mb-4 outline-none border border-white/10">
-                    <button id="save-cloud" class="btn-primary px-6 py-2 rounded-lg text-[10px]">SAVE KEY</button>
+                
+                <div id="tab-cloud" class="tab-content hidden">
+                    <h4 class="text-xl font-black uppercase mb-6 text-sky-500">Neural Bridge (Groq)</h4>
+                    <input id="set-apikey" type="password" placeholder="gsk_..." class="w-full bg-white/5 border border-white/5 p-4 rounded-xl mb-6 outline-none focus:border-sky-500">
+                    <button id="save-cloud" class="btn-primary px-8 py-3 rounded-xl text-[10px] uppercase">Save Uplink</button>
+                </div>
+
+                <div id="tab-security" class="tab-content hidden">
+                    <h4 class="text-xl font-black uppercase mb-6">Security Access</h4>
+                    <label class="text-[9px] text-white/40 uppercase font-black block mb-2">New Password</label>
+                    <input type="password" placeholder="••••••••" class="w-full bg-white/5 border border-white/5 p-4 rounded-xl mb-4 outline-none">
+                    <button class="btn-primary px-8 py-3 rounded-xl text-[10px] uppercase" onclick="alert('Access Code Rotated.')">Update Credentials</button>
                 </div>
             </div>
         </div>
     </div>
 
+    <script type="text/python" src="botinitials.py"></script>
     <script type="text/python" src="buttonsresponder.py"></script>
     <script type="text/python" src="engine.py"></script>
     <script>
-        window.addEventListener('load', () => setTimeout(() => document.getElementById('boot-screen').classList.add('loaded'), 800));
+        window.addEventListener('load', () => setTimeout(() => document.getElementById('boot-screen').classList.add('loaded'), 600));
     </script>
 </body>
 </html>
