--- a/index.html
+++ b/index.html
@@ -1,36 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MobbyOS V5.4.1 | SIC Corp</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>MobbyOS V5.5.0 | SIC Corp</title>
 
-    <script src="https://cdn.tailwindcss.com"></script>
+<script src="https://cdn.tailwindcss.com"></script>
+<script src="SICryption.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.12.0/brython.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.12.0/brython_stdlib.min.js"></script>
 
-    <!-- SECURITY FIRST -->
-    <script src="SICryption.js"></script>
+<!-- Firebase -->
+<script src="https://www.gstatic.com/firebasejs/9.31.0/firebase-app-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.31.0/firebase-auth-compat.js"></script>
+<script src="https://www.gstatic.com/firebasejs/9.31.0/firebase-database-compat.js"></script>
 
-    <!-- Brython -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.12.0/brython.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/brython/3.12.0/brython_stdlib.min.js"></script>
-
-    <!-- Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/9.31.0/firebase-app-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.31.0/firebase-auth-compat.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.31.0/firebase-database-compat.js"></script>
-
-    <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+<link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 </head>
+<body onload="brython(); initSICAccountSystem(); checkFork();" data-sic-secure="true">
 
-<body onload="brython(); initSICAccountSystem();" data-sic-secure="true">
+<!-- SICAccountSystem -->
+<div id="sic-setup-screen" class="fixed inset-0 bg-black z-[40000] flex items-center justify-center p-6 transition-all duration-700 ease-in-out">
+    <div class="glass p-12 rounded-[3.5rem] w-full max-w-[500px] text-center border-white/5 shadow-2xl transform transition-all duration-500 hover:scale-105">
+        <h2 class="text-4xl font-black italic mb-2 tracking-tighter">SIC <span class="text-sky-500">Account</span></h2>
+        <p class="text-[10px] text-white/30 uppercase tracking-[0.5em] mb-10">Sync Preferences Across Devices</p>
+        <div class="space-y-4">
+            <button id="btn-firebase-login" class="w-full bg-sky-500 text-black font-bold py-4 rounded-2xl hover:brightness-110 active:scale-95 transition-all uppercase text-[10px] tracking-widest">Login with Google</button>
+            <button id="btn-microsoft-login" class="w-full bg-indigo-500 text-white font-bold py-4 rounded-2xl hover:brightness-110 active:scale-95 transition-all uppercase text-[10px] tracking-widest">Login with Microsoft</button>
+            <button id="btn-email-login" class="w-full bg-white/5 text-white font-bold py-4 rounded-2xl hover:bg-white/10 transition-all uppercase text-[10px] tracking-widest">Login with Email</button>
+            <button id="btn-guest-login" class="w-full bg-white/10 text-white font-bold py-4 rounded-2xl hover:bg-white/20 transition-all uppercase text-[10px] tracking-widest">Continue as Guest</button>
+        </div>
+    </div>
+</div>
 
-    <!-- everything else stays EXACTLY the same UI-wise -->
+<!-- Main UI -->
+<div class="flex h-screen w-screen bg-black overflow-hidden hidden" id="main-ui">
+    <aside class="w-72 border-r border-white/5 p-6 flex flex-col z-20 bg-black transition-all duration-500 ease-in-out">
+        <h2 class="text-2xl font-black italic mb-10 tracking-tighter px-2">MOBBY<span class="text-sky-500">OS</span></h2>
+        <nav class="space-y-2 flex-grow">
+            <button id="btn-start" class="w-full text-left p-4 rounded-2xl text-[11px] font-bold uppercase hover:bg-white/5 transition-all">🏠 Home</button>
+            <button id="btn-dashboard" class="w-full text-left p-4 rounded-2xl text-[11px] font-bold uppercase hover:bg-white/5 transition-all">📊 Dashboard</button>
+        </nav>
+        <div id="profile-trigger" class="p-4 glass rounded-[2rem] flex items-center gap-4 border-white/10 cursor-pointer hover:bg-white/10 transition-all duration-300">
+            <img id="sidePFP" src="" class="w-10 h-10 rounded-full border border-white/10 bg-slate-900 object-cover">
+            <div class="overflow-hidden">
+                <p id="sideName" class="text-[10px] font-bold uppercase truncate">...</p>
+                <p id="mode-indicator" class="text-[7px] text-sky-500 font-bold uppercase tracking-widest">Active</p>
+            </div>
+        </div>
+        <button id="btn-sic-setup" class="w-full text-left p-5 mt-6 glass rounded-2xl text-[10px] uppercase font-bold hover:bg-white/5 transition-all">🌀 Sync SIC Account</button>
+    </aside>
 
-    <script type="text/python" src="SICryption.py"></script>
-    <script type="text/python" src="buttonsresponder.py"></script>
-    <script type="text/python" src="engine.py"></script>
-    <script src="sicaccount.js"></script>
+    <main class="flex-grow relative bg-[#010409] transition-all duration-500">
+        <button id="open-settings" class="absolute top-8 right-8 z-50 p-4 glass rounded-2xl hover:scale-110 active:scale-95 transition-all">⚙️</button>
+
+        <div id="desktop-view" class="absolute inset-0 flex items-center justify-center transition-opacity duration-700">
+            <div class="text-center group">
+                <h1 class="text-9xl font-black italic tracking-tighter opacity-10 group-hover:opacity-40 transition-all duration-1000 select-none">MOBBY</h1>
+                <p class="text-[10px] text-white/10 uppercase tracking-[1.5em] mt-4">SIC Corp Legacy Engine</p>
+            </div>
+        </div>
+
+        <div id="chat-view" class="absolute inset-0 hidden flex flex-col p-10 bg-black/50 backdrop-blur-xl transition-all duration-700">
+            <div id="chat-box" class="flex-grow glass rounded-[3rem] p-8 overflow-y-auto mb-6 flex flex-col"></div>
+            <div class="flex gap-4 p-2 glass rounded-full border-white/10 shadow-2xl transition-all">
+                <textarea id="chat-input" placeholder="Neural command..." rows="1" class="flex-grow bg-transparent px-8 py-5 outline-none text-sm resize-none text-white transition-all duration-300"></textarea>
+                <button id="send-chat" class="w-16 h-16 bg-sky-500 rounded-full text-black flex items-center justify-center hover:scale-105 active:scale-90 transition-transform duration-300">➤</button>
+            </div>
+        </div>
+
+        <button id="btn-add" class="absolute bottom-12 right-12 w-16 h-16 bg-sky-500 rounded-full text-black text-3xl font-bold shadow-2xl hover:scale-110 transition-transform active:scale-90 duration-300">+</button>
+    </main>
+</div>
+
+<script type="text/python" src="SICryption.py"></script>
+<script type="text/python" src="buttonsresponder.py"></script>
+<script type="text/python" src="engine.py"></script>
+<script src="sicaccount.js"></script>
+<script src="SICryption.js"></script>
 
 </body>
 </html>
